Update examples to use CSV files